# OptiMaster

./: .gitattributes  .gitignore  AGENTS.md  EXECUTABLE_APP_AUDIT_SECONDARY.md  GUI_MICROCOPY_SPEC.md  LICENSE  PROJECT_PRODUCTION_PLAN.md  QA_BETA_PLAN.md  README.md  RELEASE.md  TASKS_MASTER.md  UX_UI_SENIOR_AUDIT_PLAN_FR.md  WEBSITE_BRIEF.md  WINDOWS_PACKAGING.md  config.example.yaml  pyproject.toml
.github/workflows/: release.yml
.pytest-run-20260424/test_preference_store_creates_0/: preferences.json
.pytest-run-20260424/test_session_history_append_an0/: history.json
.pytest-run-20260424/test_session_history_max_entri0/: history.json
.pytest-run-full-2/test_session_history_append_an0/: history.json
.pytest-run-full-2/test_session_history_max_entri0/: history.json
.tmp/batch-renders-2/sample/: analysis.json  ranking.json
.tmp/batch-renders-2/sample-02/: analysis.json  ranking.json
.tmp/batch-renders/sample/: analysis.json  ranking.json
docs/: ISSUES_BRAINSTORM_2026-04-22.md  PLAN_IA_OPTIONNELLE.md
scripts/: bootstrap.ps1
src/optimaster/: __init__.py  __main__.py  cli.py  config.py  errors.py  ffmpeg.py  gui.py  history.py  models.py  pipeline.py  preferences.py  presets.py  scoring.py  service.py
src/optimaster/assets/: __init__.py
tests/: test_cli.py  test_history.py  test_preferences.py  test_scoring.py  test_service.py  test_service_history.py  test_service_profiles.py
