[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimaster"
version = "2026.4.24"
description = "Local FFmpeg-based audio finishing assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Mathieu Luyten" }
]
dependencies = [
  "PyYAML>=6.0.1",
  "PySide6>=6.7",
]

[project.scripts]
optimaster = "optimaster.cli:main"

[project.gui-scripts]
optimaster-gui = "optimaster.gui:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
optimaster = ["assets/*.svg", "assets/*.png", "assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
